Changed position of RecipeGridSubheading from fixed to absolute to resolve error causing recipes to appear behind search bar when scrolling.

--- a/src/components/RecipeItems/RecipeGrid/RecipeGridSubheading/RecipeGridSubheading.css
+++ b/src/components/RecipeItems/RecipeGrid/RecipeGridSubheading/RecipeGridSubheading.css
@@ -127,7 +127,7 @@
         align-items: flex-start;
         margin-bottom: inherit;
         margin-top: 70px;
-        position: fixed;
+        position: absolute;
     }
     .recipe-grid__subheading--search-input {
         position: relative;
